libs update, add docker for
